--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     </nav>
     <div class="supporting" id="process">
       <h3>Our Process</h3>
-      <img></img>
+      <img src="./images/identify.svg">
       <h4>Identify</h4>
       <p>We focus on the most important details.</p>
-      <img></img>
+      <img src=".images/understand.svg">
       <h3>Understand</h3>
       <p>We study our projects inside and out.</p>
-      <img></img>
+      <img src="./excute.svg">
       <h3>Execute</h3>
       <p>We put everything we have into our work.</p>
     </div>
