--- a/index.html
+++ b/index.html
@@ -3,41 +3,57 @@
   <head>
     <meta charset="utf-8">
     <title>Broadway Design</title>
-    <link href=".\Resources\css\style.css" type="text/css" rel="stylesheet">
+    <link href=".\resources\css\style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <h1>Broadway Desing</h1>
-    <nav>
-      <ul>
-        <li>Home</li>
-        <li>Process</li>
-        <li>Work</li>
-        <li>Team</li>
-        <li>Contact</li>
-      </ul>
-    </nav>
-    <div class="supporting" id="process">
-      <h3>Our Process</h3>
-      <img src="./images/identify.svg">
-      <h4>Identify</h4>
-      <p>We focus on the most important details.</p>
-      <img src=".images/understand.svg">
-      <h3>Understand</h3>
-      <p>We study our projects inside and out.</p>
-      <img src="./excute.svg">
-      <h3>Execute</h3>
-      <p>We put everything we have into our work.</p>
+    <!-- header -->
+    <div class="header">
+      <h1>Broadway Design</h1>
+        <p><a class="top-nav" href="#">Home</a></p>
+        <p><a class="top-nav" href="#process">Process</a></p>
+        <p><a class="top-nav" href="#work">Work</a></p>
+        <p><a class="top-nav" href="#team">Team</a></p>
+        <p><a class="top-nav" href="#contact">Contact</a></p>
     </div>
-    <h3>Designed in New York</h3>
-    <h3>Portfolio</h3>
-    <p>Coming Soon</p>
-    <h3>Team</h3>
-    <p>We're Hiring!</p>
-    <h3>Contact</h3>
-    <p>Phone: (555)-555-5555
-      E-mail: test@example.com
-      Twitter: @test
-    </p>
-    <footer>Broadway 2017 Home About Work Team Contact</footer>
+    <!-- main section -->
+    <div id="process">
+      <h2>Our Process</h2>
+        <img src="C:\Projects\Broadway\Resources\images\identify.svg">
+      <h4>Identify</h4>
+        <p>We focus on the most important details.</p>
+        <img src="C:\Projects\Broadway\Resources\images\understand.svg">
+      <h4>Understand</h4>
+        <p>We study our projects inside and out.</p>
+        <img src="C:\Projects\Broadway\Resources\images\execute.svg">
+      <h4>Execute</h4>
+        <p>We put everything we have into our work.</p>
+    </div>
+    <!-- following sections -->
+    <div id="slogan">
+      <h3>Designed in New York</h3>
+    </div>
+    <div id="portfolio">
+      <h4>Portfolio</h4>
+        <p>Coming Soon</p>
+    </div>
+    <div id="team">
+      <h4>Team</h4>
+        <p>We're Hiring!</p>
+    </div>
+    <div id="contact">
+      <h4>Contact</h4>
+        <p>Phone: (555)-555-5555</p>
+        <p>E-mail: test@example.com</p>
+        <p>Twitter: @test</p>
+    </div>
+    <div class="footer">
+      <p>&copy;Broadway 2017
+        <a class="btn-nav" href="#">Home</a>
+        <a class="btn-nav" href="#">About</a>
+        <a class="btn-nav" href="#">Work</a>
+        <a class="btn-nav" href="#">Team</a>
+        <a class="btn-nav" href="#">Contact</a>
+      </p>
+    </div>
   </body>
 </html>
